<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_height="match_parent"
                android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/toolbar_setting"/>

    <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="56dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:id="@+id/settingProfilePhoto"
                    app:civ_border_color="@color/bluedark"
                    app:civ_border_width="2dp"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/settingPhoto"
                      android:layout_marginTop="20dp"
                      android:text="@string/setting_photo"
                      android:textColor="@color/colorPrimary"
                      android:gravity="center"/>


            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="8dp">
                <TextView android:id="@+id/settingName"
                          android:textAlignment="center"
                          android:textStyle="bold"
                          android:textSize="18sp"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/setting_name" />
            </android.support.design.widget.TextInputLayout>

            <!-- Display Name Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/settingDisplayName"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/setting_display_name"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Display Name Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/settingWebsite"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/setting_website"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Display Name Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/settingDescription"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/setting_description"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Display Name Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/settingPhoneNumber"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/setting_phone_number"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

