<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/profileContainer">

    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:id="@+id/relLayout1">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:civ_border_color="@color/bluedark"
                    app:civ_border_width="2dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"/>

            <TextView
                    android:id="@+id/profileDisplayName"
                    android:text="@string/Name"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profileImage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>

            <TextView
                    android:id="@+id/profileEmail"
                    android:text="@string/Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profileDisplayName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"/>

            <TextView
                    android:text="@string/Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileDescription"
                    android:layout_below="@+id/profileEmail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"/>

            <Button
                    android:id="@+id/profileSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/Setting"
                    android:textColor="@color/white"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="210dp"
                    android:layout_toStartOf="@+id/profileImage"/>

            <Button
                    android:text="@string/Logout"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:id="@+id/profileSignout"
                    android:layout_toEndOf="@+id/profileImage"
                    android:layout_alignTop="@+id/profileSetting"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@id/relLayout1">

            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileRecyclerView"/>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>
